[gd_scene load_steps=2 format=2]

[ext_resource path="res://FX/Juice/ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node2D"]
script = ExtResource( 1 )

[node name="Frequencey" type="Timer" parent="."]

[node name="ShakeTween" type="Tween" parent="."]

[node name="Duration" type="Timer" parent="."]
[connection signal="timeout" from="Frequencey" to="." method="_on_Frequencey_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
